<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/finishScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="edu.wm.cs.cs301.NathanOwen.ui.FinishActivity" >

    <TextView
        android:id="@+id/textViewSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_won"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewFailure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_lost"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/batteryLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/pathLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_game"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
